fix layout issues in nav bar for logged in user

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,12 @@ body {
 form.button_to {
   display: inline;
 }
+
+//Nav bar adjustments
+.signed-in {
+  display: block;
+  color: #777;
+  line-height: 20px;
+  position: relative;
+  padding: 10px 15px;
+}
